Add stub keyboard

--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
     <p id="member" data-status="">
       <span id="member-active">Active</span><span id="member-not-active">Not active</span> <span id="member-hours"></span> hours
     </p>
+    <div id="keyboard">
+      <div data-value="1">1</div>
+      <div data-value="2">2</div>
+      <div data-value="3">3</div>
+      <div data-value="4">4</div>
+      <div data-value="5">5</div>
+      <div data-value="6">6</div>
+      <div data-value="7">7</div>
+      <div data-value="8">8</div>
+      <div data-value="9">9</div>
+      <div data-value="cancel">🗙</div>
+      <div data-value="0">0</div>
+      <div data-value="done">✓</div>
+    </div>
   </section>
 
   <script src="js/main.js" async></script>
