Replace unicode symbol unavailable on mobiles

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
       <button data-value="9">9</button>
       <button data-value="done">✓</button>
       <button data-value="0">0</button>
-      <button data-value="cancel">🗙</button>
+      <button data-value="cancel">x</button>
     </div>
   </section>
   <script src="js/main.js" async></script>
