Show private fields if they are present

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,9 @@
     <p id="member" data-status="">
       <span id="member-active">Actif</span><span id="member-not-active">Inactif</span> (<span id="member-hours"></span> heures)
     </p>
+    <p id="private" data-private="true">
+      <span id="member-name"></span> <span id="member-phone"></span>
+    </p>
     <div id="keyboard">
       <button data-value="1">1</button>
       <button data-value="2">2</button>
