updating frontend to hide hours when undefined

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
   <section id="ready">
     <input id="search" type="search" placeholder="Numéro de membre" pattern="[0-9]+" title="Numéro de membre">
     <p id="member" data-status="">
-      <span id="member-active">Actif</span><span id="member-not-active">Inactif</span> (<span id="member-hours"></span> heures)
+      <span id="member-active">Actif</span><span id="member-not-active">Inactif</span> <span id="member-hours"></span>
     </p>
     <p id="private" data-private="true">
       <span id="member-name"></span> <span id="member-phone"></span>
